Improve description of Scala IDE in the about.ini file.

--- a/org.scala-ide.sdt.core/about.ini
+++ b/org.scala-ide.sdt.core/about.ini
@@ -3,8 +3,7 @@ featureImage=about.png
 aboutText=The Scala IDE for Eclipse\n\
 (c) LAMP/EPFL and Scala Solutions\n\
 \n\
-The Scala IDE for Eclipse provides the tools needed to \n\
-to build Scala programs on the Eclipse Platform.\n\
+The Scala IDE for Eclipse provides an integrated environment for creating Scala programs.\n\
 Visit http://scala-ide.org/\n\n\
 Scala Solutions Team: Iulian Dragos, Donna Malayeri, Martin Odersky, Hubert Plocinicak, Eugene Vigdorchik\n\
 ScalaIDE.org organizer: Miles Sabin\n\
