Added miglayout.jar to the output jar, so that it's found at runtime. Fixes formatter property page.

--- a/org.scala-ide.sdt.core/build.properties
+++ b/org.scala-ide.sdt.core/build.properties
@@ -9,4 +9,5 @@ bin.includes = META-INF/,\
                license.html,\
                about.ini,\
                about.png,\
-               templates/
+               templates/,\
+               lib/ 
