Add formatter preferences page (cherry picked from commit a509d7cfa8f845b9e5d5f056fdbb3a54cb08f05f)
Conflicts:

	org.scala-ide.sdt.core/.classpath
	org.scala-ide.sdt.core/pom.xml
	org.scala-ide.sdt.core/src/scala/tools/eclipse/ScalaHyperlinkDetector.scala
	org.scala-ide.sdt.core/src/scala/tools/eclipse/ScalaSourceViewerConfiguration.scala
	org.scala-ide.sdt.core/src/scala/tools/eclipse/formatter/ScalaFormattingStrategy.scala

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -7,7 +7,23 @@
       <page
             class="scala.tools.eclipse.properties.CompilerSettings"
             id="org.scala-ide.sdt.core.properties.compilerPropertyPage"
-            name="Scala Compiler Properties">
+            name="Scala Compiler">
+         <filter
+               name="nature"
+               value="org.scala-ide.sdt.core.scalanature"/>
+         <enabledWhen>
+         <or> <instanceof value="org.eclipse.jdt.core.IJavaProject"/>
+              <instanceof value="org.eclipse.core.resources.IProject"/>
+         </or>
+         </enabledWhen>
+      </page>
+   </extension>
+   <extension
+         point="org.eclipse.ui.propertyPages">
+      <page
+            class="scala.tools.eclipse.formatter.FormatterPreferencePage"
+            id="scala.tools.eclipse.formatter.FormatterPropertyPage"
+            name="Scala Formatter">
          <filter
                name="nature"
                value="org.scala-ide.sdt.core.scalanature"/>
