--- a/org.scala-ide.sdt.core/pom.xml
+++ b/org.scala-ide.sdt.core/pom.xml
@@ -22,6 +22,13 @@
       <artifactId>org.scala-ide.sdt.compiler.ext</artifactId>
       <version>${project.version}</version>
     </dependency-->
+    <dependency>
+    	<groupId>com.miglayout</groupId>
+    	<artifactId>miglayout</artifactId>
+    	<version>3.7.4</version>
+    	<type>jar</type>
+    	<scope>compile</scope>
+    </dependency>
   </dependencies>
   
   <build>
