--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -536,14 +536,23 @@
           id="org.scala-ide.sdt.core.addScalaLibrary"
           nameFilter="*"
           objectClass="org.eclipse.jdt.core.IJavaProject">
-       <action
+        <action
              class="scala.tools.eclipse.actions.AddScalaLibraryAction"
              enablesFor="+"
              id="org.scala-ide.sdt.core.action.addScalaLibrary"
              label="Add Scala Library to Build Path"
              menubarPath="org.scala-ide.sdt.core.popupMenu/content"
              tooltip="Add the Scala standard library to the project build path">
-       </action>
+        </action>
+        <visibility>
+        <and>
+          <or>
+            <objectState name="projectNature" value="org.scala-ide.sdt.core.scalanature"/>
+            <objectState name="projectNature" value="ch.epfl.lamp.sdt.core.scalanature"/>
+          </or>
+          <objectClass name="org.eclipse.jdt.core.IJavaProject"/>
+        </and>
+      </visibility>
     </objectContribution>
       <objectContribution
             adaptable="true"
