Added new-ish functionality for the Scala REPL, which is still pretty lame. (cherry-picking from commit 88653af8cf3407b88ac8a68857eb379b15c7e7b1)

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -615,6 +615,16 @@
             label="Scala Console"/>
    </extension>
 
+  <extension point="org.eclipse.ui.console.consolePageParticipants">
+     <consolePageParticipant
+           class="scala.tools.eclipse.interpreter.ReplConsolePageParticipant"
+           id="org.scala-ide.sdt.core.consolePageParticipant2">
+        <enablement>
+           <instanceof
+                 value="scala.tools.eclipse.interpreter.ReplConsole">
+           </instanceof></enablement>
+     </consolePageParticipant>
+  </extension>
   <extension
         id="org.scala-ide.sdt.core.preferences"
         point="org.eclipse.core.runtime.preferences">
@@ -868,6 +878,11 @@
          categoryId="scala.tools.eclipse.refactoring.commands.refactoring"
          id="scala.tools.eclipse.refactoring.command.AddImport"
          name="Add Import"/>
+      <command
+            categoryId="org.eclipse.debug.ui.category.run"
+            id="scala.tools.eclipse.repl.historyUp"
+            name="Repl History Up">
+      </command>
 </extension>
 
    <extension point="org.eclipse.ui.contexts">
@@ -909,6 +924,12 @@
    		 schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
    		 contextId="scala.tools.eclipse.scalaEditorScope"
    		 sequence="M1+M2+M"/>
+   <key
+         commandId="scala.tools.eclipse.repl.historyUp"
+         contextId="org.eclipse.debug.ui.console"
+         schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+         sequence="CTRL+ARROW_UP">
+   </key>
 
    </extension>
    <extension
