Added support for launching as Junit test

--- a/org.scala-ide.sdt.core/build.properties
+++ b/org.scala-ide.sdt.core/build.properties
@@ -10,4 +10,5 @@ bin.includes = META-INF/,\
                about.ini,\
                about.png,\
                templates/,\
-               lib/ 
+               lib/,\
+               plugin.properties
