--- a/org.scala-ide.sdt.core.tests/pom.xml
+++ b/org.scala-ide.sdt.core.tests/pom.xml
@@ -9,8 +9,22 @@
   <artifactId>org.scala-ide.sdt.core.tests</artifactId>
   <packaging>eclipse-test-plugin</packaging>
   
+  <profiles>
+    <profile>
+      <id>Mac OS</id>
+      <activation>
+        <os>
+          <family>mac</family>
+        </os>
+      </activation>
+      <properties>
+        <tycho.test.OSspecific>-Dosgi.ws=cocoa -XstartOnFirstThread</tycho.test.OSspecific>
+      </properties>
+    </profile>
+  </profiles>
+
   <properties>
-    <tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m -Dosgi.ws=cocoa -XstartOnFirstThread -Dsdtcore.nodiagnostics</tycho.test.jvmArgs>
+    <tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m -Dsdtcore.nodiagnostics ${tycho.test.OSspecific}</tycho.test.jvmArgs>
   </properties>
 
   <dependencies>
@@ -50,6 +64,21 @@
         <configuration>
           <useUIHarness>true</useUIHarness>
           <useUIThread>true</useUIThread> 
+
+          <!-- Enable JDT weaving -->
+          <systemProperties combine.children="append">
+            <aj.weaving.verbose>true</aj.weaving.verbose>
+            <org.aspectj.weaver.showWeaveInfo>true</org.aspectj.weaver.showWeaveInfo>
+            <org.aspectj.osgi.verbose>true</org.aspectj.osgi.verbose>
+          </systemProperties>
+          <frameworkExtensions>
+            <frameworkExtension>
+              <groupId>p2.osgi.bundle</groupId>
+              <artifactId>org.eclipse.equinox.weaving.hook</artifactId>
+              <version>1.0.0.v20100108</version>
+            </frameworkExtension>
+          </frameworkExtensions>
+
           <!-- <includes> -->
           <!--   <include>scala/tools/eclipse/*Test.class</include> -->
           <!-- </includes> -->
