--- a/org.scala-ide.sdt.core.tests/pom.xml
+++ b/org.scala-ide.sdt.core.tests/pom.xml
@@ -21,6 +21,16 @@
         <tycho.test.OSspecific>-Dosgi.ws=cocoa -XstartOnFirstThread</tycho.test.OSspecific>
       </properties>
     </profile>
+
+    <profile>
+      <activation>
+	<activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+	<tycho.test.OSspecific></tycho.test.OSspecific>
+      </properties>
+    </profile>
+
   </profiles>
 
   <properties>
@@ -66,18 +76,18 @@
           <useUIThread>true</useUIThread> 
 
           <!-- Enable JDT weaving -->
-          <systemProperties combine.children="append">
-            <aj.weaving.verbose>true</aj.weaving.verbose>
-            <org.aspectj.weaver.showWeaveInfo>true</org.aspectj.weaver.showWeaveInfo>
-            <org.aspectj.osgi.verbose>true</org.aspectj.osgi.verbose>
-          </systemProperties>
-          <frameworkExtensions>
-            <frameworkExtension>
-              <groupId>p2.osgi.bundle</groupId>
-              <artifactId>org.eclipse.equinox.weaving.hook</artifactId>
-              <version>1.0.0.v20100108</version>
-            </frameworkExtension>
-          </frameworkExtensions>
+          <!-- <systemProperties combine.children="append"> -->
+          <!--   <aj.weaving.verbose>true</aj.weaving.verbose> -->
+          <!--   <org.aspectj.weaver.showWeaveInfo>true</org.aspectj.weaver.showWeaveInfo> -->
+          <!--   <org.aspectj.osgi.verbose>true</org.aspectj.osgi.verbose> -->
+          <!-- </systemProperties> -->
+          <!-- <frameworkExtensions> -->
+          <!--   <frameworkExtension> -->
+          <!--     <groupId>p2.osgi.bundle</groupId> -->
+          <!--     <artifactId>org.eclipse.equinox.weaving.hook</artifactId> -->
+          <!--     <version>1.0.0.v20100108</version> -->
+          <!--   </frameworkExtension> -->
+          <!-- </frameworkExtensions> -->
 
           <!-- <includes> -->
           <!--   <include>scala/tools/eclipse/*Test.class</include> -->
@@ -87,6 +97,17 @@
           <testClass>scala.tools.eclipse.TestsSuite</testClass>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.sonatype.tycho</groupId>
+        <artifactId>target-platform-configuration</artifactId>
+        <version>${tycho.version}</version>
+        <configuration>
+          <resolver>p2</resolver>
+          <pomDependencies>consider</pomDependencies>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 </project>
