--- a/org.scala-ide.sdt.core.tests/pom.xml
+++ b/org.scala-ide.sdt.core.tests/pom.xml
@@ -76,18 +76,18 @@
           <useUIThread>false</useUIThread> 
 
           <!-- Enable JDT weaving -->
-          <!-- <systemProperties combine.children="append"> -->
-          <!--   <aj.weaving.verbose>true</aj.weaving.verbose> -->
-          <!--   <org.aspectj.weaver.showWeaveInfo>true</org.aspectj.weaver.showWeaveInfo> -->
-          <!--   <org.aspectj.osgi.verbose>true</org.aspectj.osgi.verbose> -->
-          <!-- </systemProperties> -->
-          <!-- <frameworkExtensions> -->
-          <!--   <frameworkExtension> -->
-          <!--     <groupId>p2.osgi.bundle</groupId> -->
-          <!--     <artifactId>org.eclipse.equinox.weaving.hook</artifactId> -->
-          <!--     <version>1.0.0.v20100108</version> -->
-          <!--   </frameworkExtension> -->
-          <!-- </frameworkExtensions> -->
+          <systemProperties combine.children="append">
+            <aj.weaving.verbose>true</aj.weaving.verbose>
+            <org.aspectj.weaver.showWeaveInfo>true</org.aspectj.weaver.showWeaveInfo>
+            <org.aspectj.osgi.verbose>true</org.aspectj.osgi.verbose>
+          </systemProperties>
+          <frameworkExtensions>
+            <frameworkExtension>
+              <groupId>p2.osgi.bundle</groupId>
+              <artifactId>org.eclipse.equinox.weaving.hook</artifactId>
+              <version>1.0.0.v20100503</version>
+            </frameworkExtension>
+          </frameworkExtensions>
 
           <!-- <includes> -->
           <!--   <include>scala/tools/eclipse/*Test.class</include> -->
