Getting a bit closer to having the trunk build running. Still fails because of the 'scala.reflect' split package (exported both from scala.library and scala.compiler). Will investigate later tonight.

--- a/org.scala-ide.scala.library/pom.xml
+++ b/org.scala-ide.scala.library/pom.xml
@@ -138,7 +138,7 @@
             <Bundle-Version>${version.number}${patch.level.suffix}</Bundle-Version>
             <Bundle-Vendor>scala-ide.org</Bundle-Vendor>
             <Embed-Dependency>*;scope=compile|runtime;inline=false</Embed-Dependency>
-            <_exportcontents>scala.*;version=${version.number}</_exportcontents>
+            <_exportcontents>scala.reflect,scala.*;version=${version.number}</_exportcontents>
             <Embed-Directory>lib</Embed-Directory>
             <Embed-StripVersion>true</Embed-StripVersion>
             <Include-Resource>lib=${project.build.directory}/lib</Include-Resource>
