Cleaned up the refactoring code and added some documentation.
Because the rename refactoring is now much simpler, we now also have a
progress bar that can be canceled during indexing.

I never actually generated the documentation, but I guess it will only
be read in the source code anyway.

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -843,7 +843,7 @@
                tooltip="Organize Imports">
          </action>
          <action
-               class="scala.tools.eclipse.refactoring.RenameAction"
+               class="scala.tools.eclipse.refactoring.rename.RenameAction"
                definitionId="scala.tools.eclipse.refactoring.command.Rename"
                id="scala.tools.eclipse.refactoring.renameAction"
                label="Rename"
@@ -1002,7 +1002,7 @@
  <extension
        point="org.eclipse.ltk.core.refactoring.renameParticipants">
     <renameParticipant
-          class="scala.tools.eclipse.refactoring.RenameParticipant"
+          class="scala.tools.eclipse.refactoring.rename.RenameParticipant"
           id="org.scala-ide.sdt.core.renameParticipant"
           name="Scala Rename Participant">
        <enablement>
