Prototype support for "run selection" in an editor. To use, select code and hit cmd+shift+X (ctrl+shift+X on windows).
Currently cannot stop/restart the interpreter process, and cannot enter
commands in the repl window directly.

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -1035,4 +1035,21 @@
        </partition>
     </javaCompletionProposalComputer>
  </extension>
+ <extension
+       id="scala.tools.eclipse.consoleView"
+       point="org.eclipse.ui.views">
+    <category
+          id="org.scala-ide.sdt.core.scalaCategory"
+          name="Scala">
+    </category>
+    <view
+          allowMultiple="true"
+          category="org.scala-ide.sdt.core.scalaCategory"
+          class="scala.tools.eclipse.interpreter.ReplConsoleView"
+          icon="icons/full/etool16/scala_app.gif"
+          id="org.scala-ide.sdt.core.consoleView"
+          name="Scala REPL"
+          restorable="false">
+    </view>
+ </extension>
 </plugin>
