--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -10,6 +10,8 @@
 
   <properties>
     <scala.version>2.8.0</scala.version>
+    <version.tag>nightly</version.tag>
+    <version.suffix>210</version.suffix>
     <tycho.version>0.9.0</tycho.version>
     <sbt.version>0.9.0-SNAPSHOT</sbt.version>
     <maven.compiler.source>1.5</maven.compiler.source>
@@ -92,7 +94,7 @@
         <artifactId>maven-osgi-packaging-plugin</artifactId>
         <version>${tycho.version}</version>
         <configuration>
-          <format>yyyyMMddHHmm'${version.tag}-${git.hash}'</format>
+          <format>'${version.tag}-${version.suffix}-'yyyyMMddHHmm'-${git.hash}'</format>
           <archiveSite>true</archiveSite>
         </configuration>
       </plugin>    
@@ -159,6 +161,9 @@
           <value>2.8.0</value>
         </property>
       </activation>
+      <properties>
+        <version.suffix>28</version.suffix>
+      </properties>
       <repositories>
         <repository>
           <id>scala-refactoring-2.8.0.final</id>
@@ -189,6 +194,9 @@
           <value>2.8.1</value>
         </property>
       </activation>
+      <properties>
+        <version.suffix>28</version.suffix>
+      </properties>
       <repositories>
         <repository>
           <id>scala-refactoring-2.8.1.final</id>
@@ -219,6 +227,9 @@
           <value>2.8.2-SNAPSHOT</value>
         </property>
       </activation>
+      <properties>
+        <version.suffix>28</version.suffix>
+      </properties>
       <repositories>
         <repository>
           <id>scala-refactoring-2.8.x</id>
@@ -248,6 +259,9 @@
           <value>2.9.0</value>
         </property>
       </activation>
+      <properties>
+        <version.suffix>29</version.suffix>
+      </properties>
       <repositories>
         <repository>
           <id>scala-refactoring-2.9.0.final</id>
@@ -278,6 +292,9 @@
           <value>2.9.0-1</value>
         </property>
       </activation>
+      <properties>
+        <version.suffix>29</version.suffix>
+      </properties>
       <repositories>
         <repository>
           <id>scala-refactoring-2.9.0-1</id>
@@ -331,6 +348,9 @@
     </profile>
     <profile>
       <id>local-scala-2.8.0</id>
+      <properties>
+        <version.suffix>28</version.suffix>
+      </properties>
       <dependencies>
         <dependency>
           <groupId>org.scala-ide</groupId>
@@ -361,6 +381,9 @@
     </profile>
     <profile>
       <id>local-scala-2.8.1</id>
+      <properties>
+        <version.suffix>28</version.suffix>
+      </properties>
       <dependencies>
         <dependency>
           <groupId>org.scala-ide</groupId>
@@ -392,6 +415,9 @@
     <!-- local 2.9.0-SNAPSHOT -->
     <profile>
       <id>local-scala-2.9.x</id>
+      <properties>
+        <version.suffix>29</version.suffix>
+      </properties>
       <dependencies>
         <dependency>
           <groupId>org.scala-ide</groupId>
