--- a/org.scala-ide.sdt.core.tests/pom.xml
+++ b/org.scala-ide.sdt.core.tests/pom.xml
@@ -88,7 +88,13 @@
               <version>1.0.0.v20100503</version>
             </frameworkExtension>
           </frameworkExtensions>
-
+          <bundleStartLevel>
+            <bundle>
+              <id>org.eclipse.equinox.weaving.aspectj</id>
+              <level>2</level>
+              <autoStart>true</autoStart>
+            </bundle>
+          </bundleStartLevel>
           <!-- <includes> -->
           <!--   <include>scala/tools/eclipse/*Test.class</include> -->
           <!-- </includes> -->
